# fanuc_eip_translator

./: README.md  package.xml  setup.cfg  setup.py
fanuc_eip_translator/: eip_translator_node.py
matlab/: ros_test.m
