<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fanuc_eip_translator</name>
  <version>1.0.0</version>
  <description>ROS 2 EtherNet/IP bridge node that reads live joint positions from a FANUC CRX-20iA/L controller and publishes them as sensor_msgs/JointState messages.</description>
  <maintainer email="aidanm3814@gmail.com">aidanjmartin</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
